syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Odvin/go-accounting-service/pb";

message Client {
    string name = 1;
    string surname = 2;
    string email = 3;
    google.protobuf.Timestamp password_updated = 4;
    google.protobuf.Timestamp created = 5;
    google.protobuf.Timestamp updated = 6;
}