syntax = "proto3";

package pb;

import "client_public_info.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Odvin/go-accounting-service/pb";

message CreateClientTokenRequest {
    string email = 1;
    string password = 2;
}

message CreateClientTokenResponse {
  string session_id =1;
	string access_token = 2;
	string refresh_token = 3;
	ClientPublicInfo client_info = 4;
	google.protobuf.Timestamp refresh_token_expired = 5;
	google.protobuf.Timestamp access_token_expired = 6;
}